fixed spacing for some tings

--- a/public/style.css
+++ b/public/style.css
@@ -68,43 +68,19 @@ h1, h2 {
   text-align: center;
 }
 
-.link-github {
-  display: grid;
-  grid-template-rows: 0.5fr 20px 20px;
-  justify-content: center;
-}
-.link-github svg {
-  width: 60px;
-  transform: translate(66px, 32px);
-}
-.link-github span {
-  display: inline-grid;
-}
-
-.link-github span::after {
-  display: inline-flex;
-  content: "";
-  grid-row: 2/3;
-  /* Using the background-image and
-     its related properties to add
-     the SVG content */
-  background-image: url("../sass/christmas-tree.svg");
-  background-size: 20vw 20vw;
-  height: 20vw;
-  width: 20vw;
-}
-
 header .container {
+  padding-top: 40px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   justify-content: center;
+  color: #F2E8CF;
 }
 header .container h1 {
-  font-size: 11vw;
+  font-size: 15vw;
 }
 header .container h2 {
   grid-column: 1/3;
-  font-size: 1.8vw;
+  font-size: 2.4vw;
 }
 header .container p {
   text-align: center;
@@ -114,7 +90,36 @@ header .container a {
   grid-row: 1/3;
   grid-column: 2/3;
   text-decoration: none;
-  color: black;
+  color: #A7C957;
+}
+
+.link-github {
+  display: grid;
+  grid-template-rows: 0.5fr 20px 20px;
+  margin-left: 1vw;
+  margin-top: 2vw;
+}
+.link-github svg {
+  fill: #F2E8CF;
+  width: 7vw;
+  transform: translate(10.5vw, 3vw);
+}
+.link-github span {
+  display: inline-grid;
+  transform: translate(-10vw);
+}
+
+.link-github span::after {
+  display: inline-flex;
+  content: "";
+  grid-row: 2/3;
+  /* Using the background-image and
+     its related properties to add
+     the SVG content */
+  background-image: url("../sass/christmas-tree-2.svg");
+  background-size: 28vw 28vw;
+  height: 28vw;
+  width: 28vw;
 }
 
 nav ul {
