--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -7,19 +7,51 @@ h1, h2{
     text-align:center; 
 }
 
+
+
+// header styling
+header .container{
+    padding-top: 40px;
+    display:grid;
+    grid-template-columns: 2fr 1fr;
+    justify-content: center;
+    color: $color-cream;
+    h1{
+        font-size: 15vw;
+    }
+    
+    h2{
+        grid-column: 1/3;
+        font-size: 2.4vw;
+    }
+    p{
+        text-align: center;
+        grid-column: 1/3;
+    }
+    a{
+        grid-row: 1/3;
+        grid-column: 2/3;
+        text-decoration: none;
+        color: $color-lightgreen;
+    }
+}
 // the github star
 .link-github {
     display: grid;
     grid-template-rows:.5fr 20px 20px;
-    justify-content: center;
+    margin-left: 1vw;
+    margin-top: 2vw;
 
     svg{
-        width: 60px; 
-        transform: translate(66px, 32px);
+        fill:$color-cream;
+        width: 7vw; 
+        transform: translate(10.5vw, 3vw);
     }
     span{
         display: inline-grid;
+        transform: translate(-10vw)
     }
+    
     
 }
 
@@ -31,39 +63,13 @@ h1, h2{
         /* Using the background-image and
            its related properties to add
            the SVG content */
-        background-image: url('../sass/christmas-tree.svg');
-        background-size: 20vw 20vw;
-        height: 20vw;
-        width: 20vw;
+        background-image: url('../sass/christmas-tree-2.svg');
+        background-size: 28vw 28vw;
+        height: 28vw;
+        width: 28vw;
 }
 
-// header styling
-header .container{
-
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    h1{
-        font-size: 11vw;
-    }
-    
-    h2{
-        grid-column: 1/3;
-        font-size: 1.8vw;
-    }
-    p{
-        text-align: center;
-        grid-column: 1/3;
-    }
-    a{
-        grid-row: 1/3;
-        grid-column: 2/3;
-        text-decoration: none;
-        color: black;
-    }
-}
-
-
+// nav bar 
 nav{
     
     ul{
